[gd_scene load_steps=4 format=3 uid="uid://by53gn62dlhjt"]

[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_fblqf"]
[ext_resource type="Texture2D" uid="uid://dsm30pxk170dw" path="res://artwork/splash/SplashRemastered.png" id="2_8lb8c"]
[ext_resource type="PackedScene" uid="uid://cmsytgwfctvlm" path="res://scenes/menus/help_dialog.tscn" id="3_fs4yu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fblqf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="New Game" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
unique_name_in_owner = true
layout_mode = 2
text = "New Game"

[node name="How to play" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
unique_name_in_owner = true
layout_mode = 2
text = "How to play"

[node name="Settings" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="Credits" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"

[node name="Version" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Version: 1.0.0
"

[node name="G4V Dev" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "G4V Dev"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Splash" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("2_8lb8c")

[node name="How To Play" parent="." instance=ExtResource("3_fs4yu")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/How to play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Credits" to="." method="_on_credits_pressed"]
[connection signal="on_close" from="How To Play" to="." method="_on_how_to_play_on_close"]
